--- a/client/style.css
+++ b/client/style.css
@@ -1,75 +1,70 @@
-section {
-    text-align: center;
-    margin: 50px 0;
-}
-a.panLeft {
-    position: fixed;
-    left: 0;
-    /*background: #eee;*/
-    /*color: #000;*/
-    font-weight: bold;
-    font-size: 50px;
-    padding: 20px;
-    text-align: center;
-    top: 40%;
-    float: left;
-    cursor: pointer;
-}
-a.panRight {
-    position: fixed;
-    right: 0;
-    /*background: #eee;*/
-    /*color: #000;*/
-    font-weight: bold;
-    font-size: 50px;
-    padding: 20px;
-    text-align: center;
-    top: 40%;
-    float: left;
-    cursor: pointer;
-}
-/*a.panLeft:hover, a.panRight:hover {
-    background: #ffeeee;
-}*/
-button {
-    position: fixed;
-    bottom: 10px;
-}
-
 body {
   background: #2B353E;
   margin: 0;
   padding: 0;
 }
-#slider {
-  width: 400px;
-  height: 17px;
-  position: relative;
-  margin: 100px auto;
-  background: #10171D;
-  -webkit-border-radius: 40px;
-  -moz-border-radius: 40px;
-  border-radius: 40px;
-  -webkit-box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.9), 0px 1px 1px 0px rgba(255, 255, 255, 0.13);
-  -moz-box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.9), 0px 1px 1px 0px rgba(255, 255, 255, 0.13);
-  box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.9), 0px 1px 1px 0px rgba(255, 255, 255, 0.13);
+
+section {
+    text-align: center;
+    margin: 50px 0;
 }
-#slider .bar {
-  width: 388px;
-  height: 5px;
-  background: #333;
-  position: relative;
-  top: -4px;
-  left: 4px;
-  background: #1d2e38;
-  background: -moz-linear-gradient(left, #1d2e38 0%, #2b4254 50%, #2b4254 100%);
-  background: -webkit-gradient(linear, left top, right top, color-stop(0%, #1d2e38), color-stop(50%, #2b4254), color-stop(100%, #2b4254));
-  background: -webkit-linear-gradient(left, #1d2e38 0%, #2b4254 50%, #2b4254 100%);
-  background: -o-linear-gradient(left, #1d2e38 0%, #2b4254 50%, #2b4254 100%);
-  background: -ms-linear-gradient(left, #1d2e38 0%, #2b4254 50%, #2b4254 100%);
-  background: linear-gradient(left, #1d2e38 0%, #2b4254 50%, #2b4254 100%);
-  filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#1d2e38', endColorstr='#2b4254', GradientType=1);
-  -webkit-border-radius: 40px;
-  -moz-border-radius: 40px;
-  border-radius: 40px;
+
+a{
+  position: fixed;
+  text-align: center;
+  cursor: pointer;
+  font-weight: bold;
 }
+
+.panUp {
+    top: 0%;
+    left: 50%;
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
+.panDown {
+    bottom: 0%;
+    left: 50%;
+    float: left;
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
+.panLeft {
+    font-weight: bold;
+    font-size: 30px;
+    padding: 20px;
+    top: 40%;
+    float: left;
+}
+
+.panRight {
+    font-weight: bold;
+    font-size: 30px;
+    padding: 20px;
+    right: 0;
+    top: 40%;
+    text-align: center;
+    float: left;
+}
+
+.controls{
+  position: fixed;
+  bottom: 0%;
+  left: 0%;
+}
+
+#start{
+  position: fixed;
+}
+
+#rangevalue {
+  position: fixed;
+ }
